--- a/web/src/main/angular/src/index.html
+++ b/web/src/main/angular/src/index.html
@@ -4,8 +4,8 @@
     <base href="/">
     <title>PINPOINT</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta name="author" content="Naver" /> 
-    <meta name="keywords" content="반응형, HTML5, CSS3, RESPONSIVE, Flex layout, PINPOINT, Font awesome" /> 
+    <meta name="author" content="Naver" />
+    <meta name="keywords" content="반응형, HTML5, CSS3, RESPONSIVE, Flex layout, PINPOINT, Font awesome" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -25,17 +25,17 @@
         </div>
     </pp-root>
     <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-57786344-1', 'auto');
+        // (function(i, s, o, g, r, a, m) {
+        //     i['GoogleAnalyticsObject'] = r;
+        //     i[r] = i[r] || function() {
+        //         (i[r].q = i[r].q || []).push(arguments)
+        //     }, i[r].l = 1 * new Date();
+        //     a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+        //     a.async = 1;
+        //     a.src = g;
+        //     m.parentNode.insertBefore(a, m)
+        // })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        // ga('create', 'UA-57786344-1', 'auto');
     </script>
 </body>
 </html>
